[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

documentation = "https://docs.rs/telegram-bot/"
repository = "https://github.com/telegram-rs/telegram-bot"
readme = "../README.md"

keywords = ["telegram", "bot", "chat", "api", "vvttv"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[features]
openssl = ["hyper-tls"]
rustls = ["hyper-rustls"]
default = ["openssl"]

[dependencies]
google-youtube3 = {version = "5.0.2+20230123", path = "../google-youtube3" }
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "8.3.0"

dotenv = "0.15.0"
regex = "1"
lazy_static = "1.4.0"
bytes = "1.0.1"
tokio = { version = "1.28.1", features = ["macros", "time", "fs", "rt-multi-thread"] }

tracing = "0.1.23"
tracing-futures = "0.2"
multipart = { version = "0.18", default-features = false, features = ["client"] }

telegram-bot-raw = { version = "0.9.0", path = "../raw" }

hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = { version = "0.5", optional = true  }
futures = "0.3"
hyper-rustls = { version = "0.24.0", optional = true, features = ["http1", "http2" ] }
